--- a/templates/profile.html
+++ b/templates/profile.html
@@ -41,11 +41,12 @@
           <div class="form-row">
             <div class="col">
                 <label for="exampleFormControlFile1">Upload Photo (Image) </label>
-                <input type="file" class="form-control-file" name="file" accept="image/gif, image/jpeg, image/png, image/jpg"  onchange="readURL(this);">
+                <input type="file" class="form-control-file" name="file" accept="image/gif, image/jpeg, image/png, image/jpg"  onchange="readURL(this);"> 
             </div>
             <div class="col">
-                <img src="#"  width="100px" height="100px" id="img_file" style="display: none;"/>
-                <img src="{{profileimage}}"  width="100px" height="100px" id="profile_img"/>
+                <!--<img src="#"  width="100px" height="100px" id="img_file" style="display: none;"/>-->
+                <img src="{{ profileimage }}" width="100px" height="100px" id="profile_img"/> 
+                <!--<img src="{{ url_for('static', filename ='path/to/{{image}}.jpg') }}" width="100px" height="100px" id="profile_img"/>-->
             </div>
           </div><br>
         <button type="submit" class="btn btn-primary" value="UpdateProfile" name="updateprofileBtn">Update Profile</button>
@@ -56,17 +57,15 @@
     function readURL(input) {
         if (input.files && input.files[0]) {
             var reader = new FileReader();
-
             reader.onload = function (e) {
-                $('#img_file')
+                $('#profile_img')
                     .attr('src', e.target.result)
                     //.width(150)
                     //.height(200);
             };
-
             reader.readAsDataURL(input.files[0]);
-            document.getElementById("img_file").style.display="block";
-            document.getElementById("profile_img").style.display="none";
+            //document.getElementById("img_file").style.display="block";
+            //document.getElementById("profile_img").style.display="none";             
         }
     }
 </script>
